--- a/BibleUtilities.Test/BibleUtilities.Test.csproj
+++ b/BibleUtilities.Test/BibleUtilities.Test.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>    
     <TargetFramework>netcoreapp2.0</TargetFramework>    
-    <AssemblyName>DHaven.BibleUtilities.Test</AssemblyName>    
-    <RootNamespace>DHaven.BibleUtilities.Test</RootNamespace>
+    <AssemblyName>BibleUtilities.Test</AssemblyName>    
+    <RootNamespace>BibleUtilities.Test</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
