--- a/BibleUtil/BibleUtil.csproj
+++ b/BibleUtil/BibleUtil.csproj
@@ -5,8 +5,8 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>Berin Loritsch, Scott W. Vincent</Authors>
     <Company></Company>
-    <Description>A set of utilities to make it easy to find all Bible references in plain text.  The parser can recognize abbreviations and a number of common spelling mistakes, and even those can be translated.  It is designed around the Protestant cannon.</Description>
-    <Copyright>Copyright 2016 by DHaven.org, Copyright 2020 by Scott W. Vincent</Copyright>
+    <Description>A set of utilities to make it easy to find all Bible references in plain text.  The parser can recognize abbreviations and a number of common spelling mistakes, and even those can be translated.  It is designed around the Protestant canon.</Description>
+    <Copyright>Copyright 2016 by DHaven.org, Copyright 2020,2025 by Scott W. Vincent</Copyright>
     <PackageProjectUrl>https://github.com/svincent/BibleUtil</PackageProjectUrl>
     <RepositoryUrl>https://github.com/svincent/BibleUtil</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
@@ -17,7 +17,7 @@
     <ApplicationIcon />
     <Win32Resource />
     <PackageReleaseNotes></PackageReleaseNotes>
-    <Version>1.2</Version>
+    <Version>1.3.0</Version>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
 
